# LAB2

./: CMakeLists.txt  main.cpp  outputSecond.txt  success.cpp  t  type2.cpp
